--- a/index.html
+++ b/index.html
@@ -116,13 +116,8 @@
 				<p>Nyuwun pangapura nggih buk kula mboten kerep maringi kabar</p>
 				<p>Kula sing mboten kerep cerito2..</p>
 				<p>Mboten kulinten e.. hehe</p>
-				<p>you are not alone in this world</p>
-				<p>because...</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirits up</p>
+				<p>Matur suwun buk..</p>
+				<p>Barakallahu fii umriki</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
