--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="turn_on">Kok gelap ya?</button>
+					<button class="btn btn-primary" id="play">Tambah musik boleh? :D</button>
+					<button class="btn btn-primary" id="bannar_coming">Kurang hiasan nih!</button>
+					<button class="btn btn-primary" id="balloons_flying">Balonnya mana?</button>
+					<button class="btn btn-primary" id="cake_fadein">Kok nggak ada roti?</button>
+					<button class="btn btn-primary" id="light_candle">Belum ada lilinnya!</button>
+					<button class="btn btn-primary" id="wish_message">Selamat Ulang Tahun Buk :D</button>
+					<button class="btn btn-primary" id="story">Di klik nggih..</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
