--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+
+Skip to content
+Pull requests
+Issues
+Marketplace
+Explore
+@alwiar
+
+0
+1
+
+    127
+
+alwiar/ulangtahun forked from ayusharma/birthday
+Code
+Pull requests 2
+Projects 0
+Wiki
+Insights
+Settings
+ulangtahun/index.html
+@alwiar alwiar Update index.html 3ee1fb2 16 minutes ago
+@alwiar
+@ayusharma
+executable file 166 lines (156 sloc) 6.1 KB
 <!DOCTYPE html>
 <!--[if lt IE 7]> <html class="ie lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>    <html class="ie lt-ie9 lt-ie8"> <![endif]-->
@@ -5,7 +30,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>Selamat Ulang Tahun :)</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
 	<meta name="robots" content="index, follow" />
@@ -107,68 +132,30 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>this life is not easy as we thought</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>don't be afraid</p>
-				<p>because...</p>
-				<p>you are not alone in this world</p>
-				<p>because...</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirits up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experiecne today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday</p>
+				<p>Selamat ulang tahun buk :)</p>
+				<p>Semoga sehat dan bahagia selalu nggih..</p>
+				<p>Matur suwun sanget..</p>
+				<p>Sampun ndongakke kula terus..</p>
+				<p>Sampun kerjo, nggih dados ibu rumah tangga sing mantep pol</p>
+				<p>Ngeterke&mapak kula lan denta terus</p>
+				<p>Nyuwun pangapura nggih buk kula mboten kerep maringi kabar</p>
+				<p>Kula sing mboten kerep cerito2..</p>
+				<p>Mboten kulinten e.. hehe</p>
+				<p>Matur suwun buk..</p>
+				<p>Barakallahu fii umriki</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="turn_on">Kok gelap ya?</button>
+					<button class="btn btn-primary" id="play">Tambah musik boleh? :D</button>
+					<button class="btn btn-primary" id="bannar_coming">Kurang hiasan nih!</button>
+					<button class="btn btn-primary" id="balloons_flying">Balonnya mana?</button>
+					<button class="btn btn-primary" id="cake_fadein">Kok nggak ada roti?</button>
+					<button class="btn btn-primary" id="light_candle">Belum ada lilinnya!</button>
+					<button class="btn btn-primary" id="wish_message">Selamat Ulang Tahun Buk :D</button>
+					<button class="btn btn-primary" id="story">Di klik nggih..</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
@@ -195,9 +182,22 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-58229732-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 </html>
+
+    © 2019 GitHub, Inc.
+    Terms
+    Privacy
+    Security
+    Status
+    Help
+
+    Contact GitHub
+    Pricing
+    API
+    Training
+    Blog
+    About
+
