Your commit message

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Selamat Ulang Tahun :)</title>
+	<title>ada apa nih:)</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday">
 	<meta name="robots" content="index, follow" />
@@ -14,7 +14,7 @@
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
     <meta property="og:image" content="favicon.ico" />
-    <meta property="og:description" content="Wish you a very Happy Birthday">
+    <meta property="og:description" content="Asikin">
     <!-- End of Facebook Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">x</h2>
+    	<h2 style="color:#F2B300;">S</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">k</h2>
+    	<h2 style="color:#0719D4;">E</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">l</h2>
+    	<h2 style="color:#D14D39;">L</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">p</h2>
+    	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">j</h2>
+    	<h2 style="color:#8377E4;">M</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">r</h2>
+    	<h2 style="color:#99C96A;">A</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">t</h2>
+    	<h2 style="color:#20CFB4;">T</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -107,29 +107,27 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Selamat ulang tahun buk :)</p>
-				<p>Semoga sehat dan bahagia selalu nggih..</p>
-				<p>Matur suwun sanget..</p>
-				<p>Sampun ndongakke kula terus..</p>
-				<p>Sampun kerjo, nggih dados ibu rumah tangga sing mantep pol</p>
-				<p>Ngeterke&mapak kula lan denta terus</p>
-				<p>Nyuwun pangapura nggih buk kula mboten kerep maringi kabar</p>
-				<p>Kula sing mboten kerep cerito2..</p>
-				<p>Mboten kulinten e.. hehe</p>
-				<p>Matur suwun buk..</p>
+				<p>Selamat ulang tahun yaw :)</p>
+				<p>Semoga sehat dan bahagia selalu..</p>
+				<p>Semoga harimu menyenangkan</p>
+				<p> Hari ini adalah milikmu untuk dinikmati dengan segala kebahagiaan dan kejutan yang epic. </p>
+				<p>Semoga tahun ini membawa berkah dan kesuksesan yang luar biasa untukmu. Jangan lupa terus berjuang untuk meraih semua impianmu, ya!</p>
+				<p>Selamat merayakan hari spesialmu dengan penuh semangat dan kebahagiaan yang disertai rahmat Tuhan! 🎂</p>
+				<p>Semoga apa yang diinginkan tercapai ditahun ini</p>
 				<p>Barakallahu fii umriki</p>
+				<p>By:Manusia keren:)</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Kok gelap ya?</button>
-					<button class="btn btn-primary" id="play">Tambah musik boleh? :D</button>
-					<button class="btn btn-primary" id="bannar_coming">Kurang hiasan nih!</button>
-					<button class="btn btn-primary" id="balloons_flying">Balonnya mana?</button>
-					<button class="btn btn-primary" id="cake_fadein">Kok nggak ada roti?</button>
-					<button class="btn btn-primary" id="light_candle">Belum ada lilinnya!</button>
-					<button class="btn btn-primary" id="wish_message">Selamat Ulang Tahun Buk :D</button>
+					<button class="btn btn-primary" id="turn_on">Lak kok peteng?</button>
+					<button class="btn btn-primary" id="play">jangan lupa diklik :D</button>
+					<button class="btn btn-primary" id="bannar_coming">Katakan peta 3x lalu diklik!</button>
+					<button class="btn btn-primary" id="balloons_flying">Ada apa nih?</button>
+					<button class="btn btn-primary" id="cake_fadein">Kok sepi?</button>
+					<button class="btn btn-primary" id="light_candle">Klik coba!</button>
+					<button class="btn btn-primary" id="wish_message">Push up 2x lalu temukan sesuatu :D</button>
 					<button class="btn btn-primary" id="story">Di klik nggih..</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
