--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">S</h2>
+    	<h2 style="color:#F2B300;"></h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">E</h2>
+    	<h2 style="color:#0719D4;"></h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">L</h2>
+    	<h2 style="color:#D14D39;"></h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">A</h2>
+    	<h2 style="color:#8FAD00;"></h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">M</h2>
+    	<h2 style="color:#8377E4;"></h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;"></h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">T</h2>
+    	<h2 style="color:#20CFB4;"></h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -115,7 +115,7 @@
 				<p>Selamat merayakan hari spesialmu dengan penuh semangat dan kebahagiaan yang disertai rahmat Tuhan! 🎂</p>
 				<p>Semoga apa yang diinginkan tercapai ditahun ini</p>
 				<p>Barakallahu fii umriki</p>
-				<p>By:Manusia keren:)</p>
+				<p>By:kancamu😁:)</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
